--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ body {
     text-align: left;
     margin: 0.25rem 0;
     font-style: italic;
-    color: #858585;
+    color: #1f1f1f;
 }
 
 /* Add styles for the contact section */
