--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ body {
 }
 
 .products .products-list .product {
-    background-color: #dcdcdc;
+    background-color: #c6c6c6;
     padding: 1.5rem;
 }
 
