--- a/css/styles.css
+++ b/css/styles.css
@@ -72,8 +72,7 @@ body {
     font-size: 2.25rem;
 }
 
-.home-content p,
-.products .products-text {
+.home-content p {
     padding: 1rem 15rem;
 }
 
@@ -86,6 +85,11 @@ body {
 .products h1 {
    text-align: left;
    font-size: 2.25rem;
+}
+
+.products .products-text {
+    padding: 1rem 4rem;
+    text-align: left;
 }
 
 .products .products-list {
